--- a/views/userViews/cart.hbs
+++ b/views/userViews/cart.hbs
@@ -722,24 +722,22 @@
                     <td>
                       <div class="CartDescription">
                         <h4><a href="/productDetails/{{this.productId._id}}">{{this.productId.productName}}</a></h4>
-                        <div class="price"><span>₹{{this.productId.productPrice}}</span></div>
+                        <div id="productPrice{{@index}}" class="price"><span>₹{{this.productId.productPrice}}</span>
+                        </div>
                       </div>
                     </td>
-                    <div id="stockLimit" class="d-none">{{this.productStock}}</div>
+                    <div id="stockLimit{{@index}}" class="d-none">{{this.productId.productStock}}</div>
                     <td class="delete"><a title="Delete" href="/cart/delete/{{this._id}}"
                         onclick="return confirm('Are you sure you want to delete {{this.productId.productName}}')"> <i
                           class="glyphicon glyphicon-trash fa-2x"></i></a></td>
-                    {{!-- <td><input class="quanitySniper" type="number" value="{{this.productQuantity}}" min=1 max=10
-                        name="quanitySniper" readonly></td> --}}
-                    <td><button type="button" class="btn btn-danger btn-sm"
-                        onclick="cartDec('{{this._id}}')">-</button><span id="productQty"> &nbsp; &nbsp;
-                        {{this.productQuantity}} &nbsp; &nbsp; </span> <button type="button"
-                        class="btn btn-primary btn-sm" onclick="cartInc('{{this._id}}')">+</button></td>
-                    {{!-- <td><button id="dec" onclick="dec()">-</button><input id="qty" type="number"
-                        value="{{this.productQuantity}}" min=1 max=10 readonly style="width:35%"><button>+</button></td>
-                    --}}
-                    {{!-- <td><input type="number" value={{this.productQuantity}} min="1" max="1000"></td> --}}
-                    <td id="productPrice" class="price">₹{{this.productId.productPrice}}</td>
+                    <td>
+                      <button type="button" class="btn btn-danger btn-sm"
+                        onclick="cartDec('{{this._id}}','{{@index}}')">-</button>
+                      <span id="productQuantity{{@index}}"> &nbsp; &nbsp;{{this.productQuantity}} &nbsp; &nbsp; </span>
+                      <button type="button" class="btn btn-primary btn-sm"
+                        onclick="cartInc('{{this._id}}','{{@index}}')">+</button>
+                    </td>
+                    <td id="totalCostPerProduct{{@index}}" class="price">₹{{this.totalCostPerProduct}}</td>
                   </tr>
                   {{/each}}
                 </tbody>
@@ -789,7 +787,7 @@
                     </tr>
                     <tr>
                       <td>Grand Total</td>
-                      <td id="grandTotal" class=" site-color" id="total-price">₹{{grandTotal}}</td>
+                      <td class="site-color" id="total-price">₹{{grandTotal}}</td>
                     </tr>
                     <tr>
                       <td colspan="2">
@@ -854,32 +852,62 @@
   <!-- include custom script for site  -->
   <script src="assets/js/script.js"></script>
 
+  {{!-- swal script --}}
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   {{!-- decrease cart qty --}}
   <script>
-    async function cartDec(id) {
+    async function cartDec(id, index) {
       try {
-        const response = await fetch('/cart/decQty/' + id, { method: 'PUT' })
-        let data = await response.json()
-        console.log('from hereee', data)
-        productQty.innerHTML = data.cartProduct.productQuantity //product qty table data
-        productPrice.innerHTML = data.cartProduct.totaCostPerProduct
-        totalPrice.innerHTML= data.grandTotal
-        grandTotal.innerHTML= data.grandTotal
+        let stockLimitElement = document.getElementById('stockLimit' + index).innerText;
+        let productQuantityElement = document.getElementById('productQuantity' + index);
+        let totalCostPerProductElement = document.getElementById('totalCostPerProduct' + index);
+        let totalPriceElement = document.getElementById('totalPrice');
+        let grandTotalElement = document.getElementById('total-price');
 
+        console.log(stockLimitElement)
+        if (productQuantityElement.innerText == 1)
+          return Swal.fire({
+            icon: "error",
+            title: "Oops...",
+            text: "Something went wrong!",
+            footer: '<a href="#">Why do I have this issue?</a>'
+          });
+
+        if (Number(productQuantityElement.innerText) >= Number(stockLimitElement))
+          return Swal.fire({
+            icon: "error",
+            title: "Oopsvsdfv...",
+            text: "Something went wrong!",
+            footer: '<a href="#">Why do I have this issue?</a>'
+          });
+
+        let response = await fetch('/cart/decQty/' + id, { method: 'PUT' })
+        let data = await response.json()
+
+        productQuantityElement.innerHTML = data.cartProduct.productQuantity;
+        totalCostPerProductElement.innerHTML = '₹' + data.cartProduct.totalCostPerProduct;
+        totalPriceElement.innerHTML = '₹' + data.grandTotal
+        grandTotalElement.innerHTML = '₹' + data.grandTotal
       } catch (error) {
         console.error(error)
       }
     }
 
-    async function cartInc(id) {
+    async function cartInc(id, index) {
       try {
-        const response = await fetch('/cart/incQty/' + id, { method: 'PUT' })
+        let response = await fetch('/cart/incQty/' + id, { method: 'PUT' })
         let data = await response.json()
-        console.log('from hereee', data.productQuantity)
-        productQty.innerHTML = data.cartProduct.productQuantity //product qty table data
-        productPrice.innerHTML = data.cartProduct.totaCostPerProduct
-        totalPrice.innerHTML= data.grandTotal
-        grandTotal.innerHTML= data.grandTotal
+
+        let productQuantityElement = document.getElementById('productQuantity' + index);
+        let totalCostPerProductElement = document.getElementById('totalCostPerProduct' + index);
+        let totalPriceElement = document.getElementById('totalPrice');
+        let grandTotalElement = document.getElementById('total-price');
+
+        productQuantityElement.innerHTML = data.cartProduct.productQuantity;
+        totalCostPerProductElement.innerHTML = '₹' + data.cartProduct.totalCostPerProduct;
+        totalPriceElement.innerHTML = '₹' + data.grandTotal
+        grandTotalElement.innerHTML = '₹' + data.grandTotal
       } catch (error) {
         console.error(error)
       }
